Documento en Contingencia

--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -36,6 +36,10 @@
                              <t t-if="o.state != 'draft'">
                                  DOCUMENTO TRIBUTARIO ELECTRÓNICO
                              </t>
+                             <t t-if="o.journal_id.contingencia_fel and o.state == 'draft'">
+                                Documento en Contingencia<br/>
+                                Número de Acceso: <span t-esc="o.id+100000000"/>
+                            </t>
                             <br/>
                             <t t-if="o.journal_id.tipo_documento_fel in [1,'FACT']">
                                 FACTURA
@@ -68,9 +72,7 @@
                                 NOTA DE CRÉDITO
                             </t>
                             <t t-if="o.journal_id.contingencia_fel and o.state == 'draft'">
-                                Documento en Contingencia<br/>
-                                Número de Acceso: <span t-esc="o.id+100000000"/><br/>
-                                Emisión en contingencia, obtenga el DTE Certificado en el sitio www.sat.gob.gt/efactura<br/>
+                                <br/>Emisión en contingencia, obtenga el DTE Certificado en el sitio www.sat.gob.gt\fel
                             </t>
                             <t t-if="o.firma_fel">
                                 <br/>
