--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -85,7 +85,7 @@
                             <strong>Fecha Factura:</strong>
                             <p class="m-0" t-field="o.invoice_date"/>
                         </div>
-                        <div class="col-auto mw-100 mb-2" t-if="o.invoice_date_due and o.type == 'out_invoice' and o.state == 'posted'" name="due_date">
+                        <div class="col-auto mw-100 mb-2" t-if="o.invoice_date_due and o.state == 'posted'" name="due_date">
                             <strong>Fecha Vencimiento:</strong>
                             <p class="m-0" t-field="o.invoice_date_due"/>
                         </div>
@@ -205,9 +205,6 @@
                             </div>
                         </div>
                     </div>
-                    <p t-if="o.type in ('out_invoice', 'in_refund')">
-                        Referencia de pago : <b><span t-field="o.invoice_payment_ref"/></b>
-                    </p>
                     <p t-if="o.narration" name="comment">
                         <span t-field="o.narration"/>
                     </p>
@@ -235,7 +232,7 @@
                 <t t-set="data_report_margin_top" t-value="20"/>
                 <t t-set="data_report_header_spacing" t-value="10"/>
                 <t t-foreach="docs" t-as="o">
-                    <t t-set="lang" t-value="o.invoice_user_id.sudo().lang if o.type in ('in_invoice', 'in_refund') else o.partner_id.lang"/>
+                    <t t-set="lang" t-value="o.partner_id.lang"/>
                     <t t-call="fel_gt.report_invoice_document" t-lang="lang"/>
                 </t>
             </t>
