--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -205,6 +205,19 @@
                             </div>
                         </div>
                     </div>
+                    <t t-if="o.journal_id.tipo_documento_fel in [9,'NDEB'] or o.journal_id.tipo_documento_fel in [10,'NCRE']">
+                        <t t-if="o.factura_original_id">
+                            <br/>Factura Asociada: Serie Fel <span t-field="o.factura_original_id.serie_fel"/>, Número Fel: <span t-field="o.factura_original_id.numero_fel"/>, Fecha de Emisión: <span t-field="o.factura_original_id.date_invoice"/>
+                        </t>
+                    </t>
+                    <div>Sujeto a pagos trimestrales ISR</div>
+                    <t t-if="o.state != 'draft'">
+                        Certificador:
+                        <t t-if="o.certificador_fel == 'guatefactura'">
+                            GUATEFACTURAS SOCIEDAD ANONIMA<br/>
+                            NIT: 5640773-4<br/>
+                        </t>
+                    </t>
                     <p t-if="o.narration" name="comment">
                         <span t-field="o.narration"/>
                     </p>
