--- a/views/account_view.xml
+++ b/views/account_view.xml
@@ -64,6 +64,7 @@
                         <page string="Extra">
                             <group string="FEL">
                                 <group>
+                                    <field name="certificador_fel"/>
                                     <field name="afiliacion_iva_fel"/>
                                     <field name="frases_fel"/>
                                     <field name="adenda_fel"/>
