--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -91,7 +91,7 @@
                             <p class="m-0" t-field="o.invoice_date_due"/>
                         </div>
                         <div class="col-auto mw-100 mb-2" t-if="o.invoice_origin" name="origin">
-                            <strong>Orien:</strong>
+                            <strong>Origen:</strong>
                             <p class="m-0" t-field="o.invoice_origin"/>
                         </div>
                         <div class="col-auto mw-100 mb-2" t-if="o.partner_id.ref" name="customer_code">
